# pyGnuCash

./: .gitignore  GnucashAcc.py  README.md  Reportitem.py  createReport.py  expenseReport.py  expenseReportNEw.py  openConnection_backup.py  pyproject.toml  report.template  treeSearch.py  treeSearchTest.py
src/gnucashApi/: __init__.py  gnucash_api.py  gnucash_report.py  tree_search.py
src/gnucashApi/templates/: report.template
