[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gnucashApi"
version = "0.0.1"
authors = [
  { name="SebGad", email="author@example.com"},
]
description = "This package provides a database API for gnucash SQL lite databases."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
